added form styles for login, fixed headers across the site

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+/* line 65, ../../../../../../Library/Ruby/Gems/1.8/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
+[class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, .stat-group:after, [role="main"]:after { content: ""; display: table; clear: both; }
+
 /* line 61, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
 * html { font-size: 112.5%; }
 
@@ -567,18 +570,18 @@ label, .label { display: block; }
 .stat:first-of-type, .stat__value { margin-left: 0; }
 
 /* line 10, ../../sass/scales/utilities/_placeholders.scss */
-[class*="nav"]:before, .media:before, [class*="island"]:before, [class*="islet"]:before, [class*="multi-list"]:before, .stat-group:before, [class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, .stat-group:after { content: " "; display: table; }
+[class*="nav"]:before, .media:before, [class*="island"]:before, [class*="islet"]:before, [class*="multi-list"]:before, .stat-group:before, [role="main"]:before, [class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, .stat-group:after, [role="main"]:after { content: " "; display: table; }
 /* line 15, ../../sass/scales/utilities/_placeholders.scss */
-[class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, .stat-group:after { clear: both; }
+[class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, .stat-group:after, [role="main"]:after { clear: both; }
 
 /* line 24, ../../sass/scales/utilities/_placeholders.scss */
 .nav--keywords > li, .nav--keywords > li > a, .nav--pagination > li, .nav--pagination > li > a, .nav--breadcrumb > li, .nav--breadcrumb > li > a, .nav--breadcrumb--path > li, .nav--breadcrumb--path > li > a { display: inline-block; }
 
-/* line 31, ../../sass/style.scss */
+/* line 33, ../../sass/style.scss */
 html { background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(5%, #ffc0cb), color-stop(5%, rgba(255, 192, 203, 0))); background-image: -webkit-linear-gradient(bottom, #ffc0cb 5%, rgba(255, 192, 203, 0) 5%); background-image: -moz-linear-gradient(bottom, #ffc0cb 5%, rgba(255, 192, 203, 0) 5%); background-image: -o-linear-gradient(bottom, #ffc0cb 5%, rgba(255, 192, 203, 0) 5%); background-image: linear-gradient(bottom, #ffc0cb 5%, rgba(255, 192, 203, 0) 5%); -webkit-background-size: 100% 1.5em; -moz-background-size: 100% 1.5em; -o-background-size: 100% 1.5em; background-size: 100% 1.5em; background-position: left top; }
 
 /* line 1, ../../sass/partials/_global.scss */
-body { background-color: #d8d8a8; }
+html { background-color: #d8d8a8; }
 
 /* line 5, ../../sass/partials/_global.scss */
 [role="banner"] { background-color: #01002b; color: #fdfef3; padding-top: 0.75em; }
@@ -591,6 +594,27 @@ body { background-color: #d8d8a8; }
 
 /* line 19, ../../sass/partials/_global.scss */
 .logo h1 { display: table-cell; vertical-align: middle; padding-left: 0.61111em; }
+
+/* line 25, ../../sass/partials/_global.scss */
+.branding-container { max-width: 60em; margin: 0 auto; padding: 0 14px; }
+@media (min-width: 32em) { /* line 25, ../../sass/partials/_global.scss */
+  .branding-container { padding: 0 20px; } }
+
+/* line 35, ../../sass/partials/_global.scss */
+[role="main"] { max-width: 60em; margin: 0 auto; padding: 0 14px; margin-top: 0em; padding-top: 1.5em; padding-bottom: 0.75em; margin-bottom: 0em; background-color: #fdfef3; position: relative; }
+@media (min-width: 32em) { /* line 35, ../../sass/partials/_global.scss */
+  [role="main"] { padding: 0 20px; margin-top: 0em; padding-top: 1.5em; padding-bottom: 0.75em; margin-bottom: 0em; } }
+
+/* line 50, ../../sass/partials/_global.scss */
+[role="contentinfo"] { max-width: 60em; margin: 0 auto; padding: 0 14px; color: #fdfef3; background-color: #01002b; margin-top: 0em; padding-top: 1.5em; padding-bottom: 0.075em; margin-bottom: 0em; }
+@media (min-width: 32em) { /* line 50, ../../sass/partials/_global.scss */
+  [role="contentinfo"] { padding: 0 20px; margin-top: 0em; padding-top: 1.5em; padding-bottom: 0.075em; margin-bottom: 0em; } }
+
+@media (min-width: 37.125em) { /* line 64, ../../sass/partials/_global.scss */
+  .form-wrapper { max-width: 28em; } }
+
+/* line 70, ../../sass/partials/_global.scss */
+.mbn { margin-bottom: 0 !important; }
 
 /* line 1, ../../sass/partials/_hal.scss */
 .metal { display: inline-block; width: 70px; height: 70px; border-radius: 50px; -moz-border-radius: 50px; -webkit-border-radius: 50px; box-sizing: border-box; background: #417d9f; background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#43637c), to(#2c3c4b)); background-image: -webkit-linear-gradient(#43637c, #2c3c4b); background-image: -moz-linear-gradient(#43637c, #2c3c4b); background-image: -o-linear-gradient(#43637c, #2c3c4b); background-image: linear-gradient(#43637c, #2c3c4b); border-top: 2px solid #b8ccd7; padding: 5px; box-shadow: 0 2px 0 #21262c, 0 4px 0 #232429, 0 6px 0 #040003, 0 0 20px #000, 0 5px 20px #000, 0 -2px 0 #6d93a6; -moz-box-shadow: 0 2px 0 #21262c, 0 4px 0 #232429, 0 6px 0 #040003, 0 0 20px #000, 0 5px 20px #000, 0 -2px 0 #6d93a6; -webkit-box-shadow: 0 2px 0 #21262c, 0 4px 0 #232429, 0 6px 0 #040003, 0 0 20px #000, 0 5px 20px #000, 0 -2px 0 #6d93a6; }
@@ -625,3 +649,53 @@ body { background-color: #d8d8a8; }
   50% { box-shadow: inset 0 3px 0px #52352E, inset 0 5px 0 #312A25; -moz-box-shadow: inset 0 3px 0px #52352E, inset 0 5px 0 #312A25; -webkit-box-shadow: inset 0 3px 0px #52352E, inset 0 5px 0 #312A25; }
   /* line 123, ../../sass/partials/_hal.scss */
   to { box-shadow: inset 0 3px 0px #2e4452, inset 0 5px 0 #392c33; -moz-box-shadow: inset 0 3px 0px #2e4452, inset 0 5px 0 #392c33; -webkit-box-shadow: inset 0 3px 0px #2e4452, inset 0 5px 0 #392c33; } }
+
+/* line 1, ../../sass/partials/base/_forms.scss */
+.text-input, textarea { width: 100%; font-size: 1.11111em; line-height: 1.35em; padding: 0.675em; background: #f5f5f5; -webkit-box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999; -moz-box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999; box-shadow: inset 0 5px 2px rgba(0, 0, 0, 0.05), inset 0 1px 0 #999999, inset 1px 0px 0 #999999, inset -1px 0px 0 #999999, inset 0px -1px 0 #999999; border-radius: 4px; }
+/* line 8, ../../sass/partials/base/_forms.scss */
+.text-input:focus, textarea:focus { -webkit-box-shadow: inset 0 1px 0 #cccccc, inset 1px 0px 0 #cccccc, inset -1px 0px 0 #cccccc, inset 0px -1px 0 #cccccc; -moz-box-shadow: inset 0 1px 0 #cccccc, inset 1px 0px 0 #cccccc, inset -1px 0px 0 #cccccc, inset 0px -1px 0 #cccccc; box-shadow: inset 0 1px 0 #cccccc, inset 1px 0px 0 #cccccc, inset -1px 0px 0 #cccccc, inset 0px -1px 0 #cccccc; background: #fff; }
+
+/* line 14, ../../sass/partials/base/_forms.scss */
+.check-label, .check-list label, .check-list .label { display: inline; }
+
+/* line 18, ../../sass/partials/base/_forms.scss */
+legend { font-size: 1.77778em; line-height: 1.6875em; }
+
+/* line 22, ../../sass/partials/base/_forms.scss */
+.error-list { border: 3px dashed #c00000; margin-left: 0; padding: 0 2.38889em; margin-top: 0em; padding-top: 1.5em; padding-bottom: 1.5em; margin-bottom: 1.5em; color: #c00000; }
+
+/* line 1, ../../sass/partials/patterns/_nav.scss */
+[role="navigation"] { background-color: #7a7a7a; }
+
+/* line 5, ../../sass/partials/patterns/_nav.scss */
+.nav--main { max-width: 60em; margin: 0 auto; background-color: #7a7a7a; height: 100%; }
+
+/* line 12, ../../sass/partials/patterns/_nav.scss */
+.nav--main li a { text-align: center; border-bottom: 1px solid #fdfef3; padding-top: 0.75em; padding-bottom: 0.75em; color: #fdfef3; background-color: #7a7a7a; }
+/* line 20, ../../sass/partials/patterns/_nav.scss */
+.nav--main li a:hover { text-decoration: none; background-color: #fdfef3; color: #78a8c0; }
+
+/* line 27, ../../sass/partials/patterns/_nav.scss */
+.nav--main li:first-child a { padding-top: 0.75em; border-top: 1px solid #fdfef3; }
+
+@media (min-width: 30.0625em) { /* line 37, ../../sass/partials/patterns/_nav.scss */
+  [class*="nav"] > li, [class*="nav"] > li > a { display: inline-block; }
+  /* line 43, ../../sass/partials/patterns/_nav.scss */
+  .nav--main li a { border: 0; padding-left: 1.11111em; padding-right: 1.11111em; }
+  /* line 48, ../../sass/partials/patterns/_nav.scss */
+  .nav--main li a:hover { border-bottom: 0.4em solid #486060; padding-bottom: 0.375em; }
+  /* line 54, ../../sass/partials/patterns/_nav.scss */
+  .nav--main li:first-child a { border: 0; }
+  /* line 57, ../../sass/partials/patterns/_nav.scss */
+  .nav--main li:first-child a:hover { border-bottom: 0.4em solid #486060; padding-bottom: 0.375em; } }
+/* line 1, ../../sass/partials/patterns/_buttons.scss */
+[class*="btn"] { background-color: #78a8c0; border-radius: 4px; color: #fdfef3; -webkit-transition: background-color 0.5s ease-in-out; -webkit-transition-delay: 0; -moz-transition: background-color 0.5s ease-in-out 0; -o-transition: background-color 0.5s ease-in-out 0; transition: background-color 0.5s ease-in-out 0; }
+/* line 7, ../../sass/partials/patterns/_buttons.scss */
+[class*="btn"]:hover { background-color: #8cb5c9; color: #fdfef3; }
+
+/* line 13, ../../sass/partials/patterns/_buttons.scss */
+.btn--action { background-color: #ff7c00; }
+/* line 16, ../../sass/partials/patterns/_buttons.scss */
+.btn--action:hover { background-color: #ff8f26; }
+@media (min-width: 32em) { /* line 13, ../../sass/partials/patterns/_buttons.scss */
+  .btn--action { width: 40.67797%; float: left; margin-right: -100%; margin-left: 16.94915%; clear: both; } }
