--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -10,6 +10,7 @@ $warning-color: #ff7c00;
 $error-color: #c00000;
 $success-color: #00c92c;
 $highlight-color: #ffc440;
+$grey: #7a7a7a;
 $white: #FDFEF3;
 
 //
