--- a/templates/common/header.twig
+++ b/templates/common/header.twig
@@ -1,20 +1,23 @@
     <header role="banner">
-        <div class="logo">
-            <a href="/" class="hal">
-                <div class="metal active">
-                    <div class="light">
-                        <div class="glowing-red">
-                            <div class="glowing-yellow"></div>
+        <div class="branding-container">
+            <div class="logo">
+                <a href="/" class="hal">
+                    <div class="metal active">
+                        <div class="light">
+                            <div class="glowing-red">
+                                <div class="glowing-yellow"></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-            <h1>HAL 9000</h1>
+                </a>
+                <h1>HAL 9000</h1>
+            </div>
+
+            <h2 class="zeta">Child of Codepushinator, QBERT and Github Enterprise</h2>
         </div>
 
-        <h2 class="zeta">Child of Codepushinator, QBERT and Github Enterprise</h2>
-        <nav>
-            <ul class="nav">
+        <nav role="navigation">
+            <ul class="nav--main mbn">
                 <li><a href="/a" title="project groups">Repository Groups</a></li>
                 <li><a href="/admin" title="admin dashboard">Admin Dashboard</a></li>
                 <li><a href="/admin/arrangements" title="add/edit arrangements">Manage Arrangements</a></li>
