--- a/templates/common/htmlbottom.twig
+++ b/templates/common/htmlbottom.twig
@@ -1,2 +1,10 @@
- </body>
+        </main>
+        <footer role="contentinfo">
+            <p>&copy; 2013 - Quicken Loans</p>
+        </footer>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="/js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
+        <script src="/js/main.min.js"></script>
+
+    </body>
 </html>
