--- a/templates/common/htmltop.twig
+++ b/templates/common/htmltop.twig
@@ -15,8 +15,15 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="author" content="Matthew Nagi &lt;mattnagi@quickenloans.com&gt;">
         <meta name="author" content="Bridget Schiefer &lt;bridgetschiefer@quickenloans.com&gt;">
+        <meta name="author" content="Dave Gillhespy &lt;davegillhespy@quickenloans.com&gt;">
         <meta name="description" content="A push tool for code being deployed on Linux/UNIX boxes.">
         <link rel="stylesheet" href="/css/style.css">
+        <script src="/js/head.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/doy3lmv.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
- </head>
+    </head>
+
+    <body>
+    {% include 'common/header.twig' %}
+
+    <main role="main">
