--- a/templates/login.twig
+++ b/templates/login.twig
@@ -1,18 +1,25 @@
 {% set page_title = "Login" %}
 {% include 'common/htmltop.twig' %}
-   <h1>HAL 9000 - Login</h1>
    <p>Please use your Active Directory credentials to login (ie your "windows password").</p>
 {% if error %}
-   <p>{{ error }}</p>
+    <ul class="error-list">
+        <li>{{ error }}</li>
+    </ul>
 {% endif %}
-   <form action="" method="post">
-    <fieldset>
-     <legend>Login</legend>
-     <div><label for="username">Username</label></div>
-     <div><input type="text" id="username" name="username"></div>
-     <div><label for="password">Password</label></div>
-     <div><input type="password" id="password" name="password"></div>
-     <div><button type="submit">Login</button></div>
-    </fieldset>
-   </form>
+    <div class="form-wrapper">
+        <form action="" method="post">
+            <ul class="form-fields">
+            <li>
+                <label for="username">Username</label>
+                <input class="text-input" type="text" id="username" name="username">
+            </li>
+            <li>
+                <label for="password">Password</label>
+                <input class="text-input" type="password" id="password" name="password">
+            </li>
+            <li>
+                <input class="btn" type="submit" value="Log In" name="submit">
+            </li>
+        </form>
+    </div>
 {% include 'common/htmlbottom.twig' %}
