--- a/app/templates/admin/admin.html.twig
+++ b/app/templates/admin/admin.html.twig
@@ -1,6 +1,20 @@
 {% extends 'base.html.twig' %}
 
+{% block adminmenu %}
+<nav role="navigation">
+    <ul class="nav--admin mbn">
+        <li><a href="/admin/repositories" title="Manage Repositories">Repositories</a></li>
+        <li><a href="/admin/arrangements" title="Manage Repository Groups">Repository Groups</a></li>
+        <li><a href="/admin/envs" title="Manage Environments">Environments</a></li>
+        <li><a href="/admin/servers" title="Manage Servers">Servers</a></li>
+        <li><a href="/admin/deployments" title="Manage Deployments">Deployments</a></li>
+        <li><a href="/admin/users" title="Manage Users">Users</a></li>
+    </ul>
+</nav>
+{% endblock %}
+
 {% block subnav %}
+    <!--
     <a href="" class="btn toggle-nav"><i class="icon-gear"></i>Admin Management <i class="icon-chevron-down"></i></a>
     <nav class="toggled-nav">
         <ul class="nav--secondary">
@@ -12,4 +26,5 @@
             <li><a href="/admin/users" title="manage users">Manage Users</a></li>
         </ul>
     </nav>
+    -->
 {% endblock %}
