--- a/app/templates/admin/deployments.twig
+++ b/app/templates/admin/deployments.twig
@@ -3,38 +3,9 @@
 {% set page_title = "Deployments Admin" %}
 
 {% block content %}
-    <h2>Add Deployment</h2>
-    <div class="form-wrapper">
-        <form action="" method="post">
-            <ul class="form-fields">
-                <li>
-                    <label for="repositoryId">Repository</label>
-                    <select id="repositoryId" name="repositoryId">
-                        {% for repository in repositories %}
-                            <option value="{{repository.RepositoryId}}">{{repository.ShortName}}</option>
-                        {% endfor %}
-                    </select>
-                </li>
-                <li>
-                    <label for="serverId">Server</label>
-                    <select id="serverId" name="serverId">
-                        {% for server in servers %}
-                            <option value="{{server.ServerId}}">{{server.HostName}}</option>
-                        {% endfor %}
-                    </select>
-                </li>
-                <li>
-                    <label for="path">Target Path</label>
-                    <input class="text-input" type="text" name="path" id="path" required maxlength="255">
-                </li>
-                <li>
-                    <input class="btn" value="Create Deployment" type="submit">
-                </li>
-            </ul>
-        </form>
-    </div>
 
-    <h2>Current Deployments</h2>
+    <h2>Manage Deployment Relationships</h2>
+
     {% if deployments %}
         <table>
             <colgroup>
@@ -87,4 +58,36 @@
     {% else %}
         <p>No deployments have been setup yet.</p>
     {% endif %}
+
+    <h3>Add New</h3>
+    <div class="form-wrapper">
+        <form action="" method="post">
+            <ul class="form-fields">
+                <li>
+                    <label for="repositoryId">Repository</label>
+                    <select id="repositoryId" name="repositoryId">
+                        {% for repository in repositories %}
+                            <option value="{{repository.RepositoryId}}">{{repository.ShortName}}</option>
+                        {% endfor %}
+                    </select>
+                </li>
+                <li>
+                    <label for="serverId">Server</label>
+                    <select id="serverId" name="serverId">
+                        {% for server in servers %}
+                            <option value="{{server.ServerId}}">{{server.HostName}}</option>
+                        {% endfor %}
+                    </select>
+                </li>
+                <li>
+                    <label for="path">Target Path</label>
+                    <input class="text-input" type="text" name="path" id="path" required maxlength="255">
+                </li>
+                <li>
+                    <input class="btn" value="Create Deployment" type="submit">
+                </li>
+            </ul>
+        </form>
+    </div>
+
 {% endblock %}
