--- a/app/templates/arrangement-list.twig
+++ b/app/templates/arrangement-list.twig
@@ -4,8 +4,10 @@
 
 {% block content %}
     <h2>Repository Groups</h2>
+    <p>Repositories are organized into repository groups, commonly a team name. Select a group below to view the member
+    repositories and to push code if you have permission.</p>
+
     {% if arrangements %}
-    <h3>Choose a group</h3>
         <ul>
         {% for arrangement in arrangements %}
             <li><a href="/a/{{arrangement.ShortName}}">{{ arrangement.Name }} </a></li>
