Added delete for repos
- Adding web push group to cc on all emails.
- Adding version text to footer.
- Adding script to setup config file.
- Adding email.overide config param to force sending of all emails to that address.
- Cleanup.
- Missing spaces.
- Removing debug code.
- Working on cleaning up email handling for the push script.
- Updating push script to use DI container and HTML emails.

--- a/app/templates/admin/repositories.twig
+++ b/app/templates/admin/repositories.twig
@@ -22,7 +22,7 @@
                     <td><a href="/r/{{ repository.ShortName }}">/r/{{ repository.ShortName }}</a></td>
                     <td>{{ repository.OwnerEmail }}</td>
                     <td><a href="http://git/{{ repository.GithubUser }}/{{ repository.GithubRepo }}">{{ repository.GithubUser }}/{{ repository.GithubRepo }}</a></td>
-                    <td></td>
+                    <td><a href="/admin/repositories/{{ repository.RepositoryId }}/remove">Remove</a> </td>
                 </tr>
             {% endfor %}
             </tbody>
