--- a/app/templates/admin/servers.twig
+++ b/app/templates/admin/servers.twig
@@ -21,7 +21,7 @@
                 <tr>
                     <td>{{ server.HostName }}</td>
                     <td>{{ server.Environment }}</td>
-                    <td></td>
+                    <td><a href="/admin/servers/{{ server.ServerId }}/remove">Remove</a> </td>
                 </tr>
             {% endfor %}
             </tbody>
